--- a/detail.html
+++ b/detail.html
@@ -1,16 +1,16 @@
-{{define "homePage"}}
+{{define "detail"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Detail Page</title>
 </head>
 <body>
-<h1>Home Page</h1>
+<h1>Detail Page</h1>
 <hr>
 {{template "navbar"}}
 <hr>
-<h1>Homa PAge Properties</h1>
+<h1>Homa Page Properties</h1>
 <hr>
 <h1>SideBar</h1>
 <hr>
